--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
 }
 body {
   font-family: "Roboto", sans-serif;
+  background-color: black;
 }
 
 header {
@@ -16,6 +17,7 @@ header {
 }
 header h2 {
   padding: 2rem;
+  color: white;
 }
 .search-form {
   padding: 2rem;
@@ -26,16 +28,30 @@ header h2 {
   padding: 0.5rem;
   width: 100%;
   border: none;
-  border: 2px solid rgb(49, 49, 49);
+  border: 2px solid rgb(94, 94, 94);
   outline: none;
 }
-.search-form button {
+.search-form button,
+.more {
   border: none;
   padding: 0.5rem;
   font-size: 1rem;
-  background: rgb(49, 49, 49);
+  background: rgb(94, 94, 94);
   color: white;
   cursor: pointer;
+  outline: none;
+}
+.search-form button:active,
+.more:active {
+  border-style: none;
+}
+.search-form button:hover,
+.more:hover {
+  background: rgb(49, 49, 49);
+}
+.more {
+  padding: 1rem 3rem;
+  font-size: 1.2rem;
 }
 
 .gallery-info {
@@ -51,11 +67,11 @@ header h2 {
 
 .gallery {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
   padding: 2rem 0rem;
   width: 80%;
   margin: auto;
-  row-gap: 5rem;
+  row-gap: 3rem;
   column-gap: 3rem;
 }
 
@@ -77,12 +93,4 @@ header h2 {
   display: flex;
   justify-content: center;
   align-items: center;
-}
-.more {
-  padding: 1rem 3rem;
-  background: rgb(49, 49, 49);
-  color: white;
-  border: none;
-  font-size: 1.2rem;
-  cursor: pointer;
 }
