--- a/style.css
+++ b/style.css
@@ -67,12 +67,18 @@ header h2 {
 
 .gallery {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
   padding: 2rem 0rem;
   width: 80%;
   margin: auto;
   row-gap: 3rem;
   column-gap: 3rem;
+}
+
+@media (max-width: 500px) {
+  .gallery {
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  }
 }
 
 .img-container {
